--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,5 @@
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
 logging.level.org.springframework=info
-logging.level.com.in28minutes.springboot.todowebapp=debug
+logging.level.com.webapplicationprojects.springboot.todowebapp=debug
+logging.level.org.springframework.web.servlet=debug
