--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,18 @@
             <artifactId>glassfish-jstl</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>bootstrap</artifactId>
+            <version>5.1.3</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>jquery</artifactId>
+            <version>3.6.3</version>
+        </dependency>
+
 
         <dependency>
             <groupId>org.projectlombok</groupId>
