Implemented Delete and Update functions using FBO and Model

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,5 @@
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
 logging.level.org.springframework=info
-logging.level.com.webapplicationprojects.springboot.todowebapp=debug
+logging.level.com.webapplicationprojects.springboot.todowebapp.todo=debug
 logging.level.org.springframework.web.servlet=debug
