implemented bootstrap datepicker and fixed the logic for update todo endpoint

--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,13 @@
             <version>3.6.3</version>
         </dependency>
 
+        <!--        bootstrap for date picker-->
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>bootstrap-datepicker</artifactId>
+            <version>1.9.0</version>
+        </dependency>
+
         <!--        dependency needed for input validations-->
 
         <dependency>
