--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.mvc.view.suffix=.jsp
 logging.level.org.springframework=info
 logging.level.com.webapplicationprojects.springboot.todowebapp.todo=debug
 logging.level.org.springframework.web.servlet=debug
+spring.mvc.format.date=yyyy-MM-dd
