--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ logging.level.org.springframework=info
 logging.level.com.webapplicationprojects.springboot.todowebapp.todo=debug
 logging.level.org.springframework.web.servlet=debug
 spring.mvc.format.date=yyyy-MM-dd
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:todotestdb
