--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,7 @@
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
 logging.level.org.springframework=info
-logging.level.com.webapplicationprojects.springboot.todowebapp.todo=debug
-logging.level.org.springframework.web.servlet=debug
+logging.level.com.webapplicationprojects.springboot.todowebapp.todo=info
 spring.mvc.format.date=yyyy-MM-dd
-spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:todotestdb
+spring.jpa.defer-datasource-initialization=true
