--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,4 @@ logging.level.com.webapplicationprojects.springboot.todowebapp.todo=info
 spring.mvc.format.date=yyyy-MM-dd
 spring.datasource.url=jdbc:h2:mem:todotestdb
 spring.jpa.defer-datasource-initialization=true
+#spring.jpa.show-sql=true
