--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,19 @@ spring.mvc.view.suffix=.jsp
 logging.level.org.springframework=info
 logging.level.com.webapplicationprojects.springboot.todowebapp.todo=info
 spring.mvc.format.date=yyyy-MM-dd
-spring.datasource.url=jdbc:h2:mem:todotestdb
+#spring.datasource.url=jdbc:h2:mem:todotestdb
+#spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 spring.jpa.defer-datasource-initialization=true
-#spring.jpa.show-sql=true
+spring.jpa.show-sql=true
+spring.datasource.url=jdbc:mysql://localhost:3306/todos
+spring.datasource.username=todos-user
+spring.datasource.password=dummytodos
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=create-drop
+#docker run --detach
+#--env MYSQL_ROOT_PASSWORD=dummypassword
+#--env MYSQL_USER=todos-user
+#--env MYSQL_PASSWORD=dummytodos
+#--env MYSQL_DATABASE=todos
+#--name mysql
+#--publish 3306:3306 mysql:8-oracle
