--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/todos
 spring.datasource.username=todos-user
 spring.datasource.password=dummytodos
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 #docker run --detach
 #--env MYSQL_ROOT_PASSWORD=dummypassword
 #--env MYSQL_USER=todos-user
