--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,17 +2,22 @@
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
 logging.level.org.springframework=info
-logging.level.com.webapplicationprojects.springboot.todowebapp.todo=info
-spring.mvc.format.date=yyyy-MM-dd
-#spring.datasource.url=jdbc:h2:mem:todotestdb
-#spring.jpa.properties.hibernate.jdbc.time_zone=UTC
-spring.jpa.defer-datasource-initialization=true
 spring.jpa.show-sql=true
-spring.datasource.url=jdbc:mysql://localhost:3306/todos
-spring.datasource.username=todos-user
-spring.datasource.password=dummytodos
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto=update
+spring.mvc.format.date=yyyy-MM-dd
+logging.level.com.webapplicationprojects.springboot.todowebapp.todo=info
+management.endpoints.web.exposure.include=*
+#for h2 database
+spring.datasource.url=jdbc:h2:mem:todotestdb
+spring.jpa.defer-datasource-initialization=true
+#
+#
+#for SQL database connection
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+#spring.datasource.url=jdbc:mysql://localhost:3306/todos
+#spring.datasource.username=todos-user
+#spring.datasource.password=dummytodos
+#spring.jpa.hibernate.ddl-auto=update
+#
 #docker run --detach
 #--env MYSQL_ROOT_PASSWORD=dummypassword
 #--env MYSQL_USER=todos-user
